--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "global": "^4.4.0",
     "hid-listen": "github:zvecr/hid-listen",
     "install": "^0.13.0",
+    "javascript-state-machine": "^3.1.0",
     "lodash": "^4.17.15",
     "node-abi": "^2.12.0",
     "path": "^0.12.7",
