--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "typescript": "^3.7.2"
   },
   "dependencies": {
-    "@serialport/bindings": "3",
+    "@serialport/bindings": "^8.0.4",
     "@types/serialport": "^7.0.4",
     "electron-log": "^3.0.9",
     "electron-prompt": "^1.4.0",
@@ -105,6 +105,7 @@
     "path": "^0.12.7",
     "serialport": "^8.0.5",
     "temp": "^0.9.0",
-    "usb": "^1.6.0"
+    "usb": "^1.6.0",
+    "usb-detection": "^4.5.0"
   }
 }
