Work around broken usb-detection module
 - move detection.cpp to node_modules/usb-detection/src
 - cd node_modules/build && make

Then it creates the correct detection.node binary and you will have
working usb detection

--- a/package.json
+++ b/package.json
@@ -97,11 +97,11 @@
     "electron-updater": "^4.1.2",
     "follow-redirects": "^1.7.0",
     "global": "^4.4.0",
-    "hid-listen": "github:zvecr/hid-listen",
     "install": "^0.13.0",
     "javascript-state-machine": "^3.1.0",
     "lodash": "^4.17.15",
     "node-abi": "^2.12.0",
+    "node-hid": "^0.7.9",
     "path": "^0.12.7",
     "serialport": "^8.0.5",
     "temp": "^0.9.0",
